--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,8 @@
 # .gitignore
-
-# dependencies
-node_modules/
-.pnp/
-.pnp.js
-
-# testing
-coverage/
-
-# production
-build/
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+venv/
+*.env
+*.sqlite
