Added autocomplete functionality to application, working on list of serial number prefixes to further develop the feature

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@
 # Use this template to create Your own .env
 # file with data required for the app to work.
 
-MYSQL_ROOT_PASSWORD=yourpassword
-MYSQL_DATABASE=yourdatabase
+MYSQL_ROOT_PASSWORD=yourpassword # this is the database password for root user
+MYSQL_DATABASE=yourdatabase # this is the database name 
+SECRET_KEY=yoursecretkey # this is the secret key for the login to work in app
