--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.1'
+version: '3.4'
 
 services:
 
   db:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
+    image: mysql:latest
+    command: --default-authentication-plugin=caching_sha2_password
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
@@ -26,3 +26,5 @@ services:
       - 5000:5000
     depends_on:
       - db
+    environment:
+      - SECRET_KEY=${SECRET_KEY}
