Added a functionality of password reset for admin, added pdf report generation, edited .envs for email handling and some other things

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,9 @@
 
 MYSQL_ROOT_PASSWORD=yourpassword # this is the database password for root user
 MYSQL_DATABASE=yourdatabase # this is the database name 
-SECRET_KEY=yoursecretkey # this is the secret key for the login to work in app
+SECRET_KEY=yoursecretkey # this is the secret key for the login / password hashes to work, generate some long, random string
+MAIL_SERVER=smtp.example.com
+MAIL_USE_SSL=True
+MAIL_PORT=465
+MAIL_USERNAME=app_mail@email.address
+MAIL_PASSWORD=password
