Added mailparser for automatic parsing of service requests from email account and databroker for this data to be handled to database

--- a/config.ini.example
+++ b/config.ini.example
@@ -2,16 +2,10 @@
 # needed for credentials and environment variables
 #
 # Use this template to create Your own config.ini 
-# file with data required for the app to work,
+# file with data required for the flask app to work,
 # like keys with database credentials, environment
 # variables and so on.
 
 [flask]
 env = development
 app = app.py
-
-[database]
-host = db
-user = youruser
-password = yourpassword
-database = yourdatabase
