Added comments to .env.example and config.ini.example for clarity, also some minor changes to app.py

--- a/config.ini.example
+++ b/config.ini.example
@@ -4,7 +4,8 @@
 # Use this template to create Your own config.ini 
 # file with data required for the flask app to work,
 # like keys with database credentials, environment
-# variables and so on.
+# variables and so on, You don't really need to change
+# anything here, unless You're looking to modify the app.
 
 [flask]
 env = development
