--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,9 @@
 
 MYSQL_ROOT_PASSWORD=yourpassword # this is the database password for root user
 MYSQL_DATABASE=yourdatabase # this is the database name 
-SECRET_KEY=yoursecretkey # this is the secret key for the login / password hashes to work, generate some long, random string
-MAIL_SERVER=smtp.example.com
-MAIL_USE_SSL=True
-MAIL_PORT=465
-MAIL_USERNAME=app_mail@email.address
-MAIL_PASSWORD=password
+SECRET_KEY=yoursecretkey # this is the secret key for password hashes to work, generate some long, random string
+MAIL_SERVER=smtp.example.com # smtp server address of Your email provider
+MAIL_USE_SSL=True # True if Your email provider uses SSL
+MAIL_PORT=465 # port number of Your email provider
+MAIL_USERNAME=app_mail@email.address # username of the email account for app to use
+MAIL_PASSWORD=password # password for that email account
