Removed threading from mailparser, no longer needed, made some cosmetic changes to app.py and  added instructions to .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 
 MYSQL_ROOT_PASSWORD=yourpassword # this is the database password for root user
 MYSQL_DATABASE=yourdatabase # this is the database name 
-SECRET_KEY=yoursecretkey # this is the secret key for password hashes to work, generate some long, random string
+SECRET_KEY=yoursecretkey # this is the secret key for password hashes to work and be validated properly by Flask/ItsDangerous. Generate some long, random string
 MAIL_SERVER=smtp.example.com # smtp server address of Your email provider
 MAIL_USE_SSL=True # True if Your email provider uses SSL
 MAIL_PORT=465 # port number of Your email provider
