--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     command: python mailparser.py
     volumes:
       - temp-data:/app/temp
+    restart: always
 
   databroker:
     build: 
