--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-Flask==3.0.0
-Flask-login==0.6.3
-Flask-Mail==0.9.1
-PyMySQL==1.1.0
-python-dotenv==0.19.0
-cryptography==41.0.6
+gunicorn
+Flask
+Flask-login
+Flask-Mail
+Flask-WTF
+PyMySQL
+python-dotenv
+cryptography
 pygal
-WeasyPrint==52.5
+WeasyPrint
